fixed like button issue

--- a/views/bikeslikedelete.ejs
+++ b/views/bikeslikedelete.ejs
@@ -1,4 +1,4 @@
-<%- include('partialscleanerpagebike/headerbike') -%>
+<%- include('partialscleanerbikelikedelete/headerbikeNOPOSTINGABILITY') -%>
 
 
 <body>
@@ -50,7 +50,7 @@
     <ul>
       <% for(var i=0; i<comments.length; i++) {%>
         <li class="col-6 justify-content-between mt-5">
-          <!-- <%= comments[i].createdByUsername%> says: "<%= comments[i].comment%>" -->
+          <%= comments[i].createdByUsername%> says: "<%= comments[i].comment%>"
         </li>
         <%if(comments[i].createdById == user.id){ %>
           <form
