--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,4 @@
-<%- include('partialstrails/header copy') -%>
+<%- include('partialscleanertrailslikedelete/header copyNOPOSTINGABILITY.ejs') -%>
 
 
 <div class="container bgposition">
