--- a/views/partialscleanerbikelikedelete/headerbikeNOPOSTINGABILITY.ejs
+++ b/views/partialscleanerbikelikedelete/headerbikeNOPOSTINGABILITY.ejs
@@ -9,13 +9,13 @@
         <title>Bikagram</title>
        <!--  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
         <!-- Font Awesome icons (free version)-->
-        <!-- <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script> -->
+        <!-- <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script> 
          <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/stylescleanlikespage.css" rel="stylesheet"/>
-    <link
+     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
@@ -26,7 +26,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
-    />
+    /> 
     </head>
     <body>
        <!-- Navigation-->
@@ -52,9 +52,9 @@
 
                       <!-- <form class="nav-item" action="/addbikespost" method="GET"><button class="clear" type="submit">Create Bike Post</button></form> -->
 
-                      <form >
+                    <!--   <form >
                         <a href="#popup-box" class="buttonnav">Create Bike Post!</a>
-                       </form> 
+                       </form>  -->
 
                       
                      <!--  <form class="nav-item" ><button class="clear" type="submit" href="#popup-box">Create Trail Post!</button></form> -->
@@ -68,7 +68,7 @@
                       <form class="nav-item" action="/logout"><button  class="clear">Logout</button></form>
                   </ul>
               </div>
-              <div id="popup-box" class="overlay">
+             <!--  <div id="popup-box" class="overlay">
                 <div class="popup">
                     <a class="close" href="#">&times;</a>
                     <h2>Create Bike Post!</h2>
@@ -86,7 +86,7 @@
                             <input type="file" class="form-control" id="imageUpload" name="file">
                         </div>
                         <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-                        </div>
+                        </div> -->
                  </div>
             </div>
           </div>
