update bottom of signin page links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,16 +100,16 @@
       
           <!-- Right -->
           <div>
-            <a href="#!" class="text-white me-4">
+            <!-- <a href="#!" class="text-white me-4">
               <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#!" class="text-white me-4">
+            </a> -->
+            <a href="https://twitter.com/raylsanford" class="text-white me-4">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#!" class="text-white me-4">
-              <i class="fab fa-google"></i>
+            <a href="https://github.com/rs8799" class="text-white me-4">
+              <i class="fab fa-github"></i>
             </a>
-            <a href="#!" class="text-white">
+            <a href="www.linkedin.com/in/ray-sanford" class="text-white">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
