updated bottom linkedin link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,7 +109,7 @@
             <a href="https://github.com/rs8799" class="text-white me-4">
               <i class="fab fa-github"></i>
             </a>
-            <a href="www.linkedin.com/in/ray-sanford" class="text-white">
+            <a href="https://linkedin.com/in/ray-sanford" class="text-white">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
