--- a/csscleaner/stylesclean.css
+++ b/csscleaner/stylesclean.css
@@ -86,7 +86,7 @@ transition: opacity .3s ease-in-out;
 h1 {
   text-align: center;
   font-family: Tahoma, Arial, sans-serif;
-  color: #06D85F;
+  color: black;
   margin: 80px 0;
 }
 
