--- a/csscleaner/stylesclean.css
+++ b/csscleaner/stylesclean.css
@@ -88,6 +88,7 @@ h1 {
   font-family: Tahoma, Arial, sans-serif;
   color: black;
   margin: 80px 0;
+  -webkit-text-stroke: 2px white;
 }
 
 .box {
