--- a/views/cleanerhomepage.ejs
+++ b/views/cleanerhomepage.ejs
@@ -192,7 +192,7 @@
                                 <a href="https://linkedin.com/in/ray-sanford">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-linkedin-f fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
