--- a/csscleaner/stylescleanlogin.css
+++ b/csscleaner/stylescleanlogin.css
@@ -15,7 +15,7 @@
   font-family: Arial, sans-serif;
   
   background-size: cover;
-  background-color: black;
+  background-color: white;
   background-position: center;
   height: 100vh;
 }
@@ -23,8 +23,10 @@
 h1 {
   text-align: center;
   font-family: Tahoma, Arial, sans-serif;
-  color: #06D85F;
+  color: black;
   margin: 80px 0;
+  -webkit-text-stroke: 2px white;
+
 }
 
 .box {
