--- a/csscleaner/stylescleanlogin.css
+++ b/csscleaner/stylescleanlogin.css
@@ -15,7 +15,7 @@
   font-family: Arial, sans-serif;
   
   background-size: cover;
-  background-color: white;
+  background-color: lightgrey;
   background-position: center;
   height: 100vh;
 }
