--- a/views/cleanerhomepage.ejs
+++ b/views/cleanerhomepage.ejs
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a href="/todos"><img class="test3"  src="logobgremoved.png"/></a>
+                <a href="/home"><img class="test3"  src="logobgremoved.png"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -64,7 +64,7 @@
                             <div class="popup">
                                 <a class="close" href="#">&times;</a>
                                 <h2>Make a Post!</h2>
-                                    <form required = "required" action="/todos" enctype="multipart/form-data" method="POST">
+                                    <form required = "required" action="/home" enctype="multipart/form-data" method="POST">
                                     <div class="mb-3">
                                         <label for="title" class="form-label">Title</label>
                                         <input type="text" class="form-control" id="title" name="title">
@@ -99,7 +99,7 @@
                             <% for(var i=0; i<news.length; i++) {%>
                               <li class="col-6 justify-content-between mt-5">
                                 
-                                <a href="/todos/<%= news[i]._id%>">
+                                <a href="/home/<%= news[i]._id%>">
                                     <div class="container">
                                         <img class="img-fluid" src="<%= news[i].image%>">
                                         <div class="overlaytwo ">
