changed todo to home

--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -35,7 +35,7 @@
           <button type="submit">Make a Trails Post</button> 
         </form> 
         
-        <a href="/logout">Logout</a>
+        <a href="/logout">Logouts</a>
       </ul>
     </section>
     <section class="newsSection">
