changed todos to home

--- a/views/newscommentsandlikes.ejs
+++ b/views/newscommentsandlikes.ejs
@@ -16,7 +16,7 @@
     
     <div >
      <!--  <a class="btn btn-primary" href="/profile">Return to Profile</a> -->
-      <a class="btn btn-primary bottombuttonnews" href="/todos">Return to Home</a>
+      <a class="btn btn-primary bottombuttonnews" href="/home">Return to Home</a>
     </div>
   </div>
 </div>
