--- a/views/partialsnews/header copy.ejs
+++ b/views/partialsnews/header copy.ejs
@@ -29,7 +29,7 @@
     
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/todos">My Bike App</a></h1>
+        <h1 class=""><a href="/home">My Bike App</a></h1>
         <span>The Mountain Biking Social Network</span>
       </div>
     </header>
