--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -72,7 +72,7 @@
         <div>
             
             <h1>Contact Us</h1>
-                <form required = "required" action="/todos" enctype="multipart/form-data" method="POST">
+                <form required = "required" action="/home" enctype="multipart/form-data" method="POST">
                 <div class="mb-3">
                     <label for="title" class="form-label">Name</label>
                     <input type="text" class="form-control" id="title" name="title">
