--- a/views/partialscleanerprofile/headerprofile.ejs
+++ b/views/partialscleanerprofile/headerprofile.ejs
@@ -20,7 +20,7 @@
        <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
           <div class="container px-4 px-lg-5">
-            <a href="/todos"><img class="test3"  src="logobgremoved.png"/></a>
+            <a href="/home"><img class="test3"  src="logobgremoved.png"/></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   Menu
                   <i class="fas fa-bars"></i>
@@ -28,7 +28,7 @@
               <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ms-auto py-4 py-lg-0">
 
-                    <form class="nav-item" action="/todos">
+                    <form class="nav-item" action="/home">
                     <button class="clear" >Home</button></form>
 
                       <form class="nav-item" action="/trailsrate" method="GET">
