--- a/views/trails.ejs
+++ b/views/trails.ejs
@@ -12,7 +12,7 @@
         <% } %>
         </ul>
         <div class="row justify-content-center mt-5 ">
-          <a class="btn btn-primary " href="/todos">Return to Home</a>
+          <a class="btn btn-primary " href="/home">Return to Home</a>
         </div>  
     </div>
   </div>  
